# docsops-quality-gate

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: pages.yml  quality-gate.yml
action/: action.yml
configs/: lychee.toml  markdownlint-cli2.yaml
configs/vale/: .vale.ini
configs/vale/styles/Vocab/: Terms.yml
docs/: demo.md  example.md  index.md
docsops_quality_gate/: cli.py  report.py  scoring.py
example/: index.html
search/: search_index.json
